--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-big-calendar": "^0.40.1",
+    "react-calendar": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.1",
     "react-scripts": "4.0.3",
