--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.1",
     "react-scripts": "4.0.3",
+    "react-time-picker": "^4.5.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
