--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-big-calendar": "^0.40.1",
     "react-calendar": "^3.7.0",
     "react-datepicker": "^4.7.0",
+    "react-datetime-picker": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.1",
     "react-scripts": "4.0.3",
